--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
 
     "content_scripts": [
       {
-        "matches": ["*://*.mozilla.org/*"],
+        "matches": ["<all_urls>"],
         "js": ["script.js"]
       }
     ]
